# Rocky

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REPORT.md  evaluate.py  implementation_plan.md  pyproject.toml  train.py
EEMU-main/: dist_eval.py  main.py
backend/: main.py
backend/routers/: history.py  recommend.py  unlearn.py
backend/state/: dislikes.json
frontend/: package-lock.json  package.json
frontend-liquid/: package-lock.json  package.json
frontend-liquid/app/api/chat/: route.ts
frontend-liquid/app/chat/: page.tsx
frontend-liquid/components/chat/: ChatWindow.tsx  MessageBubble.tsx
frontend-liquid/components/ui/: GlassNav.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ExplainCard.tsx  GraphViz.tsx  RecommendList.tsx  UnlearnPanel.tsx  UserSelector.tsx  WatchHistory.tsx
frontend/lib/: api.ts
graph/: build_kg.py  partition.py
models/: lightgcn.py
recommend/: explain.py  inference.py  penalize.py
recommendation/: README.md  embedder.py  intent_parser.py  requirements.txt  scoring_engine.py  user_state.json
unlearn/: edge_deletion.py  embedding_update.py  shard_retrain.py
unlearn_chat/: README.md  app.py  classifier.py  config.py  engine.py  explainer.py  llm.py  notebook.py  prompts.py  requirements.txt  retrieval.py  state.py
